# political-portfolio

./: .gitignore  FINDINGS.md  config.yaml  pyproject.toml
data/: 118th Congress Members Guide with Election Results and Demographic Data by District - House.csv
docs/: data_catalog.md  full_derivation.md  paper1_draft.md  paper2_draft.md  paper3_draft.md  theta_followup_plan.md
outputs/: aggregate_summary_baseline.csv  aggregate_summary_baseline_2022.csv  aggregate_summary_preelection.csv  allocation_2026_live.csv  allocator_comparison_2026_live_all.csv  allocator_comparison_2026_live_competitive.csv  allocator_comparison_table.csv  allocator_comparison_table_2022.csv  beta_rc_bootstrap_distribution.csv  beta_rc_tier_composition.csv  dynamic_timing_2024.csv  dynamic_timing_gap_vs_volatility_2024.csv  eta_bootstrap_distribution.csv  eta_instability_reconciliation.csv  eta_reaction_estimates.csv  eta_seven_cycle_extension.csv  eta_seven_cycle_joint_test.csv  gb_ou_drift_fit.json  gb_volatility_by_cycle.csv  gb_volatility_term_structure.csv  gb_volatility_term_structure_historical_only.csv  lp_vs_nonlinear_mechanism.csv  msg_low_d_extrapolation_check.csv  optimal_2026_forecast_floors.json  permutation_null_allocation.csv  permutation_null_allocation_2022.csv  permutation_null_spearman.csv  permutation_null_spearman_2022.csv  permutation_tests.json  permutation_tests_2022.json  race_table_baseline.csv  race_table_baseline_2022.csv  race_table_preelection.csv  sigma_g_late_cycle_reconciliation.csv  simulator_validation_summary.json  snapshot_targeting_shift_check.json  (+10 more)
(+281 files in other folders)
